--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,11 @@
 {
   "name": "ecommerce-backend",
-  "version": "1.0.0",
-  "description": "REST API for the demo ecommerce application",
+  "version": "2.0.0",
+  "description": "Servidor HTTP autocontenido para Lumen Store",
   "type": "module",
   "main": "src/server.js",
   "scripts": {
     "dev": "node --watch src/server.js",
-    "start": "NODE_ENV=production node src/server.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "start": "node src/server.js"
   }
 }
